some tantrix fixes. Add tests.